[gd_scene load_steps=3 format=3 uid="uid://b6wcppecnenft"]

[ext_resource type="Script" uid="uid://betx75a3ncicl" path="res://tictactoe/q_tic_tac_toe.gd" id="1_alybm"]
[ext_resource type="Script" uid="uid://2f2e1b0wvbvu" path="res://tictactoe/quantum_network.gd" id="2_kp2bb"]

[node name="QTicTacToe" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_alybm")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.497474, 0.497474, 0.497474, 1)

[node name="Screen" type="VBoxContainer" parent="UI"]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="InfoLabel" type="Label" parent="UI/Screen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1920, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Квантовые крестики-нолики"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainHBox" type="HBoxContainer" parent="UI/Screen"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPart" type="Control" parent="UI/Screen/MainHBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Screen/MainHBox"]
layout_mode = 2

[node name="TTTInterface" type="VBoxContainer" parent="UI/Screen/MainHBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="ControlPanel" type="HBoxContainer" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonPanel" type="HBoxContainer" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/ButtonPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Старт"

[node name="ResetButton" type="Button" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/ButtonPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Сброс"

[node name="QuantumPanel" type="VBoxContainer" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel"]
layout_mode = 2

[node name="XLabel" type="Label" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/QuantumPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Квантовая неопределённость ×"

[node name="XSlider" type="HSlider" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/QuantumPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="OLabel" type="Label" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/QuantumPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Квантовая неопределённость o"

[node name="OSlider" type="HSlider" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface/ControlPanel/QuantumPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="GameGrid" type="GridContainer" parent="UI/Screen/MainHBox/VBoxContainer/TTTInterface"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="DownPart" type="Control" parent="UI/Screen/MainHBox/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPart" type="Control" parent="UI/Screen/MainHBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="QuantumNetwork" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_kp2bb")

[node name="DEBUGLabel" type="Label" parent="QuantumNetwork"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="HTTPRequest" type="HTTPRequest" parent="QuantumNetwork"]
